--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </ul>
         </div>
 
-        <p>
-            <i class="fas fa-info-circle"></i>
+        <p id="information">
+            <i class="fas fa-info"></i>
             Plus de 500 logements sont disponibles dans cette ville
         </p>
 
@@ -67,7 +67,7 @@
                         alt="image auberge canebière" />
                     <div class="texte_hebergement">
                         <h4>Auberge la Canebière</h4>
-                        <p>Nuit à partir de<b>25&euro;</b></p>
+                        <p class="prix">Nuit à partir de <b>25&euro;</b></p>
                         <div>
                             <span class="blue_star">
                                 <i class="fas fa-star"></i>
@@ -93,7 +93,7 @@
                         alt="image hôtel du port" />
                     <div class="texte_hebergement">
                         <h4>Hôtel du port</h4>
-                        <p>Nuit à partir de 52<b>&euro;</b></p>
+                        <p class="prix">Nuit à partir de 52<b>&euro;</b></p>
                         <div>
                             <span class="blue_star">
                                 <i class="fas fa-star"></i>
@@ -118,7 +118,7 @@
                         alt="image hôtel les mouettes" />
                     <div class="texte_hebergement">
                         <h4>Hôtel Les mouettes</h4>
-                        <p>Nuit à partir de 76<b>&euro;</b></p>
+                        <p class="prix">Nuit à partir de 76<b>&euro;</b></p>
                         <div>
                             <span class="blue_star">
                                 <i class="fas fa-star"></i>
@@ -144,7 +144,7 @@
                         alt="image hôtel de la mer" />
                     <div class="texte_hebergement">
                         <h4>Hôtel de la mer</h4>
-                        <p>Nuit à partir de 46<b>&euro;</b></p>
+                        <p class="prix">Nuit à partir de 46<b>&euro;</b></p>
                         <div>
                             <span class="blue_star">
                                 <i class="fas fa-star"></i>
@@ -169,7 +169,7 @@
                         alt="image auberge le panier" />
                     <div class="texte_hebergement">
                         <h4>Auberge Le Panier</h4>
-                        <p>Nuit à partir de<b>23&euro;</b></p>
+                        <p class="prix">Nuit à partir de <b>23&euro;</b></p>
                         <div>
                             <span class="blue_star">
                                 <i class="fas fa-star"></i>
@@ -195,7 +195,7 @@
                         alt="image hôtel chez amina" />
                     <div class="texte_hebergement">
                         <h4>Hôtel chez Amina</h4>
-                        <p>Nuit &agrave; partir de 96<b>&euro;</b></p>
+                        <p class="prix">Nuit &agrave; partir de 96<b>&euro;</b></p>
                         <div>
                             <span class="blue_star">
                                 <i class="fas fa-star"></i>
@@ -229,7 +229,7 @@
                     alt="image hôtel le soleil du matin">
                 <div class="description_hebergement_populaire">
                     <h4>Hôtel Le soleil du matin</h4>
-                    <p>Nuit à partir de 128<b>&euro;</b></p>
+                    <p class="prix"></p>Nuit à partir de 128<b>&euro;</b></p>
                     <div>
                         <span class="blue_star">
                             <i class="fas fa-star"></i>
@@ -254,8 +254,8 @@
                     src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                     alt="image hôtel le soleil du matin">
                 <div class="description_hebergement_populaire">
-                    <h4>Au coeur de l'eau</h4><br>Chambres d'hôtes</h2>
-                    <p>Nuit à partir de 71<b>&euro;</b></p>
+                    <h4>Au coeur de l'eau Chambres d'hôtes</h4>
+                    <p class="prix">Nuit à partir de 71<b>&euro;</b></p>
                     <div>
                         <span class="blue_star">
                             <i class="fas fa-star"></i>
@@ -281,11 +281,10 @@
                     alt="image hôtel le soleil du matin">
                 <div class="description_hebergement_populaire">
                     <h4>Hôtel Tout bleu et Blanc</h4>
-                    <p>Nuit à partir de 68<b>&euro;</b></p>
+                    <p class="prix">Nuit à partir de 68<b>&euro;</b></p>
                     <div>
-                        <span class="blue_star">
-                            <i class="fas fa-star"></i>
-                        </span>
+                        <i class="fas fa-star blue_star"></i>
+                        
                         <span class="blue_star">
                             <i class="fas fa-star"></i>
                         </span>
@@ -331,12 +330,12 @@
             </figure>
             <div class="activite_double">
                 <figure class="activite_double_sup">
-                    <img class="image_activite_50" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                    <img class="image_activite_30" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                         alt="image vieux port">
                     <figcaption>Notre Dame-de-la-Garde</figcaption>
                 </figure>
                 <figure class="activite_double_inf">
-                    <img class="image_activite_30" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                    <img class="image_activite_50" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                         alt="image vieux port">
                     <figcaption>Parc Longchamp</figcaption>
                 </figure>
@@ -344,21 +343,23 @@
         </div>
     </section>
     <footer id="footer">
-        <div class="div_footer">
-            <h3>A propos</h3>
-            <a href="">Fonctionnement du site</a>
-            <a href="">Conditions générales de vente</a>
-            <a href="">Données et confidentialité</a>
-        </div>
-        <div class="div_footer">
-            <h3>Nos hébergements</h3>
-            <a href="">Charte qualité</a>
-            <a href="">Soummettre votre hôtel</a>
-        </div>
-        <div class="div_footer">
-            <h3>Assistance</h3>
-            <a href="">Centre d'aide</a>
-            <a href="">Nous contacter</a>
+        <div id="footer_70">
+            <div class="div_footer">
+                <h3>A propos</h3>
+                <a href="">Fonctionnement du site</a>
+                <a href="">Conditions générales de vente</a>
+                <a href="">Données et confidentialité</a>
+            </div>
+            <div class="div_footer">
+                <h3>Nos hébergements</h3>
+                <a href="">Charte qualité</a>
+                <a href="">Soummettre votre hôtel</a>
+            </div>
+            <div class="div_footer">
+                <h3>Assistance</h3>
+                <a href="">Centre d'aide</a>
+                <a href="">Nous contacter</a>
+            </div>
         </div>
     </footer>
 </body>
