--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Reservia</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,10 +16,10 @@
     <header id="header">
         <img id="logo_menu" src="images/logo/Reservia@3x.png" alt="logo reservia" />
         <nav id="menu_navigation">
-            <a class="lien_sans_decoration" href="">Hébergement</a>
-            <a class="lien_sans_decoration_noir" href="">Activités</a>
-            <a class="lien_sans_decoration_gras" href="">S'inscrire</a>
+            <a class="lien_sans_decoration" href="#liste_hebergement">Hébergement</a>
+            <a class="lien_sans_decoration_noir" href="#section_activite">Activités</a>       
         </nav>
+        <a class="lien_sans_decoration_gras" href="">S'inscrire</a>
     </header>
     <section id="recherche_hebergement">
         <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
@@ -27,6 +28,14 @@
             <i class="fas fa-map-marker-alt"></i>
             <input type="search" value="Marseille, France" name="recherche_hebergement" />
             <button>Rechercher</button>
+        </div>
+
+        <div id="barre_recherche_responsive">
+            <div class="localisation_responsive">
+            <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <input type="search" value="Marseille, France" name="recherche_hebergement" />
+            <button><i class="fas fa-search"></i></button>
         </div>
 
         <div id="filtres">
@@ -61,11 +70,11 @@
         <article id="liste_hebergement">
             <h3>Hébergements à Marseille</h3>
             <div id="groupe_hebergement">
-                <div class="hebergement">
+                <a href="#" class="hebergement">
                     <img class="image_hebergement"
                         src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                         alt="image auberge canebière" />
-                    <div class="texte_hebergement">
+                        <div class="texte_hebergement">
                         <h4>Auberge la Canebière</h4>
                         <p class="prix">Nuit à partir de <b>25&euro;</b></p>
                         <div>
@@ -86,8 +95,8 @@
                             </span>
                         </div>
                     </div>
-                </div>
-                <div class="hebergement">
+                </a>
+                <a href="#" class="hebergement">
                     <img class="image_hebergement"
                         src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                         alt="image hôtel du port" />
@@ -112,8 +121,8 @@
                             </span>
                         </div>
                     </div>
-                </div>
-                <div class="hebergement">
+                </a>
+                <a href="#" class="hebergement">
                     <img class="image_hebergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                         alt="image hôtel les mouettes" />
                     <div class="texte_hebergement">
@@ -137,8 +146,8 @@
                             </span>
                         </div>
                     </div>
-                </div>
-                <div class="hebergement">
+                </a>
+                <a href="#" class="hebergement">
                     <img class="image_hebergement"
                         src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                         alt="image hôtel de la mer" />
@@ -163,8 +172,8 @@
                             </span>
                         </div>
                     </div>
-                </div>
-                <div class="hebergement">
+                </a>
+                <a href="#" class="hebergement">
                     <img class="image_hebergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                         alt="image auberge le panier" />
                     <div class="texte_hebergement">
@@ -188,8 +197,8 @@
                             </span>
                         </div>
                     </div>
-                </div>
-                <div class="hebergement">
+                </a>
+                <a href="#" class="hebergement">
                     <img class="image_hebergement"
                         src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                         alt="image hôtel chez amina" />
@@ -214,22 +223,22 @@
                             </span>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
-            <a href="">Afficher plus</a>
+            <a href="#">Afficher plus</a>
         </article>
         <article id="groupe_populaire">
             <div id="titre_populaire">
                 <h3>Les plus populaires</h3>
                 <i class="fas fa-chart-line"></i>
             </div>
-            <div class="hebergement_populaire">
+            <a href="#" class="hebergement_populaire">
                 <img class="image_hebergement_populaire"
                     src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                     alt="image hôtel le soleil du matin">
                 <div class="description_hebergement_populaire">
                     <h4>Hôtel Le soleil du matin</h4>
-                    <p class="prix"></p>Nuit à partir de 128<b>&euro;</b></p>
+                    <p class="prix">Nuit à partir de 128<b>&euro;</b></p>
                     <div>
                         <span class="blue_star">
                             <i class="fas fa-star"></i>
@@ -248,8 +257,8 @@
                         </span>
                     </div>
                 </div>
-            </div>
-            <div class="hebergement_populaire">
+            </a>
+            <a href="#" class="hebergement_populaire">
                 <img class="image_hebergement_populaire"
                     src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                     alt="image hôtel le soleil du matin">
@@ -274,8 +283,8 @@
                         </span>
                     </div>
                 </div>
-            </div>
-            <div class="hebergement_populaire">
+            </a>
+            <a href="#" class="hebergement_populaire">
                 <img class="image_hebergement_populaire"
                     src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                     alt="image hôtel le soleil du matin">
@@ -299,46 +308,46 @@
                         </span>
                     </div>
                 </div>
-            </div>
+            </a>
         </article>
     </div>
 
     <section id="section_activite">
         <h3>Activités à Marseille</h3>
         <div id="groupe_activite">
-            <figure class="activite">
+            <a href="#" class="activite">
                 <img class="image_activite_100" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                     alt="image vieux port">
                 <figcaption>Vieux Port</figcaption>
-            </figure>
+            </a>
             <div class="activite_double">
-                <figure class="activite_double_sup">
+                <a href="#" class="activite_double_sup">
                     <img class="image_activite_50" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                         alt="image vieux port">
                     <figcaption>Fort de Pomègues</figcaption>
-                </figure>
-                <figure class="activite_double_inf">
+                </a>
+                <a href="#" class="activite_double_inf">
                     <img class="image_activite_30" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                         alt="image vieux port">
                     <figcaption>&Icirc;les du Frioul</figcaption>
-                </figure>
+                </a>
             </div>
-            <figure class="activite">
+            <a href="#" class="activite">
                 <img class="image_activite_100"
                     src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image vieux port">
                 <figcaption>Parc National des Calanques</figcaption>
-            </figure>
+            </a>
             <div class="activite_double">
-                <figure class="activite_double_sup">
+                <a href="#" class="activite_double_sup">
                     <img class="image_activite_30" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                         alt="image vieux port">
                     <figcaption>Notre Dame-de-la-Garde</figcaption>
-                </figure>
-                <figure class="activite_double_inf">
+                </a>
+                <a href="#" class="activite_double_inf">
                     <img class="image_activite_50" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                         alt="image vieux port">
                     <figcaption>Parc Longchamp</figcaption>
-                </figure>
+                </a>
             </div>
         </div>
     </section>
@@ -346,19 +355,19 @@
         <div id="footer_70">
             <div class="div_footer">
                 <h3>A propos</h3>
-                <a href="">Fonctionnement du site</a>
-                <a href="">Conditions générales de vente</a>
-                <a href="">Données et confidentialité</a>
+                <a href="#">Fonctionnement du site</a>
+                <a href="#">Conditions générales de vente</a>
+                <a href="#">Données et confidentialité</a>
             </div>
             <div class="div_footer">
                 <h3>Nos hébergements</h3>
-                <a href="">Charte qualité</a>
-                <a href="">Soummettre votre hôtel</a>
+                <a href="#">Charte qualité</a>
+                <a href="#">Soummettre votre hôtel</a>
             </div>
             <div class="div_footer">
                 <h3>Assistance</h3>
-                <a href="">Centre d'aide</a>
-                <a href="">Nous contacter</a>
+                <a href="#">Centre d'aide</a>
+                <a href="#">Nous contacter</a>
             </div>
         </div>
     </footer>
